--- a/cyberpunkred-raycw.css
+++ b/cyberpunkred-raycw.css
@@ -16,20 +16,20 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 
+.itemcontrol {
+  z-index: 10;
+}
+
 .sheet-character,
 .sheet-lifepath,
 .sheet-cyberware,
 .sheet-netrunning, 
 .sheet-new-char,
 .sheet-settings,
+.sheet-roleabilities,
 .sheet-mook {
   display: none;
 }
-
-
-
-
-
 
 .sheet-tabstoggle[value="character"] ~ div.sheet-character,
 .sheet-tabstoggle[value="lifepath"] ~ div.sheet-lifepath,
@@ -37,8 +37,13 @@ input[type=number] {
 .sheet-tabstoggle[value="netrunning"] ~ div.sheet-netrunning,
 .sheet-tabstoggle[value="settings"] ~ div.sheet-settings,
 .sheet-tabstoggle[value="mook"] ~ div.sheet-mook,
-.sheet-shownewcharacter[value="1"] ~ .sheet-profile div.sheet-new-char {
+.sheet-shownewcharacter[value="1"] ~ .sheet-profile div.sheet-new-char,
+.sheet-tabstoggle[value="roleabilities"] ~ div.sheet-roleabilities {
   display: grid;
+}
+
+div.sheet-roleabilities {
+  position: relative;
 }
 
 .sheet-nbiprogram,
@@ -305,6 +310,23 @@ select {
   padding: 2px 4px;
 }
 
+.sheet-bg-placeholder {
+  background: none;
+  color: #fff;
+  font-weight: bold;
+  margin-bottom: 4px;
+  padding: 2px 4px;
+  border: solid 1px white;
+}
+
+.sheet-bg-brown {
+  background: #480d0f;
+  color: #fff;
+  font-weight: bold;
+  margin-bottom: 4px;
+  padding: 2px 4px;
+}
+
 .sheet-bg-black {
   background: #0f0f0f;
   color: #fae800;
@@ -404,6 +426,25 @@ select {
   
 }
 
+/** sizes for subskills **/
+
+.sheet-subskill-name{
+  width: 33%;
+}
+
+.sheet-subskill-rank{
+  width: 10%;
+}
+
+.sheet-subskill-effects{
+  width: 55%;
+}
+
+.sheet-subskill-placeholder{
+  width: 30%;
+}
+
+
 /** flex table for skills **/
 
 .sheet-skills .sheet-flex-table{
@@ -473,7 +514,9 @@ select {
     text-shadow: none;
 }
 
-[data-groupname=repeating_nbi] > button.btn.repcontrol_add::after {
+[data-groupname=repeating_nbi] > button.btn.repcontrol_add::after,
+[data-groupname=repeating_blackice] > button.btn.repcontrol_add::after,
+[data-groupname=repeating_hardware] > button.btn.repcontrol_add::after {
     content: "Install";
     background-color:#fae800;
     margin-left:-30px;
@@ -1444,6 +1487,9 @@ td.sheet-subskill-header {
   text-transform: inherit;
 }
 
+
+
+
 /* Flex Table Repeating Sections */
 
 .sheet-flex-table {
@@ -1498,4 +1544,126 @@ td.sheet-subskill-header {
 .sheet-option {
   display: flex;
   border: 1px solid #0f0f0f;
+}
+
+/** Role Abilities CSS **/
+
+.sheet-roleability-section {
+  display: grid;
+  grid-template-columns: 350px 1fr 1fr; 
+  grid-template-rows: 45px 45px auto;
+}
+
+.sheet-roleability-section .sheet-roleability-header{
+  background: #CD272C;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+   clip-path: 
+    polygon(
+      0% 15px,                 /* top left */
+      15px 0%,                 /* top left */
+      calc(100% - 15px) 0%,    /* top right */
+      100% 15px,               /* top right */
+      100% 100%,               /* bottom right */
+      0%   100%                    /* bottom left */
+    );
+  position: relative;
+  top: 5px;
+  z-index: 0;
+}
+
+.sheet-roleability-section .sheet-roleability-information{
+  background: #CD272C;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  grid-area: 2 / 1 / 3 / 2;
+}
+
+.sheet-roleability-section .sheet-roleability-information div:nth-of-type(odd) {
+  background-color:#480d0f;
+  color: #fff;
+  padding: 4px 10px;
+}
+    
+.sheet-roleability-section .sheet-roleability-information div:nth-of-type(even) {
+  background-color:white;
+  padding: 4px 10px;
+}
+
+.sheet-roleability-section .sheet-roleability-information .sheet-rank-box{
+  background: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 60px;
+}
+
+
+.sheet-roleability-section .sheet-rolesubskills{
+  background: #CD272C;
+  grid-area: 2 / 2 / 4 / 3;
+  padding: 10px;
+}
+
+.sheet-roleability-section .sheet-roleabilityrolls{
+  background: #CD272C;
+  grid-area: 2 / 3 / 4 / 4;
+  padding: 10px;
+}
+
+.sheet-roleability-section .sheet-roleability-header input {
+  background: none;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+  color: #fff;
+  font-size: 2rem;
+  border: none;
+}
+
+.sheet-roleability-section input::placeholder { 
+  color: #dfdfdf;
+  opacity: 0.7; 
+}
+
+.sheet-roleability-section .sheet-roleability-information input {
+  background: none;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+  color: #0f0f0f;
+  border: none;
+}
+
+.sheet-roleability-section .sheet-roleability-information input[type="text"] {
+  width: 120px;
+}
+
+.sheet-roleability-section .sheet-roleability-information input[type="number"] {
+  width: 20px;
+}
+
+.sheet-roleability-section .sheet-role-description {
+  grid-area: 3 / 1 / 4 / 2;
+  display: flex;
+  flex-direction: column;
+  background: #CD272C;
+  color: white;
+  font-size:1.5rem;
+  padding: 10px;
+}
+
+.sheet-roleability-section .sheet-role-description textarea {
+  grid-area: 3 / 1 / 4 / 2;
+  display: flex;
+  flex-direction: column;
+  background: #CD272C;
+  color: black;
+  background: white;
+  padding: 4px;
+  font-size: 1.2rem;
 }
